--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hafiz",
   "description": "Configuration manager that knows it all.",
-  "version": "0.0.0",
+  "version": "1.0.0-alpha",
   "homepage": "https://github.com/jluchiji/hafiz",
   "author": {
     "name": "Denis Luchkin-Zhou",
