--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "bluebird": "^2.10.2",
     "chai": "^2.3.0",
     "chai-as-promised": "^5.1.0",
+    "codeclimate-test-reporter": "^0.1.1",
     "del": "^2.0.2",
     "eslint": "^1.10.3",
     "eslint-config-airbnb": "0.0.8",
