--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "npm": ">=2.14.0"
   },
   "scripts": {
-    "test": "./node_modules/.bin/gulp coverage && ./node_modules/.bin/codeclimate-test-reporter < coverage/lcov.info",
+    "test": "./node_modules/.bin/gulp coverage:report",
     "prepublish": "./node_modules/.bin/gulp rebuild"
   },
   "dependencies": {
@@ -35,34 +35,40 @@
     "yargs": "^4.2.0"
   },
   "devDependencies": {
-    "app-root-path": "^1.0.0",
-    "babel-eslint": "^4.1.6",
+    "babel-core": "^6.4.0",
+    "babel-eslint": "^5.0.0",
     "babel-plugin-transform-flow-strip-types": "^6.3.15",
     "babel-preset-es2015-node4": "^2.0.2",
     "babel-preset-stage-3": "^6.3.13",
-    "bluebird": "^2.10.2",
-    "chai": "^2.3.0",
+    "bluebird": "^3.1.5",
+    "chai": "^3.4.1",
     "chai-as-promised": "^5.1.0",
-    "codeclimate-test-reporter": "^0.1.1",
+    "chai-properties": "^1.2.1",
     "del": "^2.0.2",
-    "eslint": "^1.10.3",
-    "eslint-config-airbnb": "0.0.8",
+    "eslint": "^2.3.0",
+    "eslint-config-airbnb": "^6.1.0",
     "eslint-plugin-babel": "^3.0.0",
+    "eslint-plugin-react": "^4.2.1",
+    "estraverse": "^4.2.0",
+    "estraverse-fb": "^1.3.1",
     "express-mocks-http": "0.0.11",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
     "gulp-changed": "^1.3.0",
+    "gulp-codeclimate-reporter": "^1.2.0",
     "gulp-concat": "^2.6.0",
     "gulp-declare": "^0.3.0",
-    "gulp-eslint": "^1.0.0",
-    "gulp-flowtype": "^0.4.8",
+    "gulp-eslint": "^2.0.0",
     "gulp-handlebars": "^4.0.0",
     "gulp-istanbul": "^0.10.0",
     "gulp-istanbul-enforcer": "^1.0.3",
+    "gulp-jsinspect": "^2.0.0",
     "gulp-mocha": "^2.1.3",
     "gulp-notify": "^2.2.0",
     "gulp-sourcemaps": "^1.5.2",
+    "gulp-util": "^3.0.7",
     "gulp-wrap": "^0.11.0",
+    "isparta": "^4.0.0",
     "merge-stream": "^1.0.0",
     "mocha": "^2.2.5",
     "sinon": "^1.15.4",
@@ -80,7 +86,11 @@
     ]
   },
   "flowConfig": {
-    "all": false
+    "all": true
+  },
+  "jsInspectConfig": {
+    "threshold": 25,
+    "suppress": 0
   },
   "eslintConfig": {
     "root": true,
@@ -90,16 +100,29 @@
       "strict": 0,
       "new-cap": 0,
       "no-undef": 2,
+      "no-shadow": 1,
       "id-length": 0,
       "func-names": 0,
-      "no-console": 0,
+      "no-console": 1,
       "key-spacing": 0,
+      "comma-dangle": [
+        1,
+        "never"
+      ],
       "padded-blocks": 0,
       "no-multi-spaces": 0,
       "no-const-assign": 2,
       "no-param-reassign": 0,
-      "comma-dangle": [
-        1,
+      "object-curly-spacing": [
+        2,
+        "always"
+      ],
+      "array-bracket-spacing": [
+        2,
+        "always"
+      ],
+      "space-before-function-paren": [
+        2,
         "never"
       ]
     },
